Fix avatar alignment in compact chat

--- a/ui/scss/component/_livestream-comment.scss
+++ b/ui/scss/component/_livestream-comment.scss
@@ -205,6 +205,10 @@
     flex-shrink: 0;
   }
 
+  .livestream-comment--minimal {
+    margin-top: 1px;
+  }
+
   @media (max-width: $breakpoint-small) {
     margin-left: 0;
   }
